--- a/XiaomiParts/AndroidManifest.xml
+++ b/XiaomiParts/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.markw.settings.device"
+    package="com.lineageos.settings.device"
     android:sharedUserId="android.uid.system" >
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -10,31 +10,48 @@
 
     <uses-sdk
         android:minSdkVersion="26"
-        android:targetSdkVersion="28" />
+        android:targetSdkVersion="26" />
     <application
         android:label="@string/advanced_settings"
-        android:theme="@android:style/Theme.DeviceDefault.Settings"
+        android:theme="@style/AppTheme"
         android:supportsRtl="true" >
         <activity
-            android:name="com.markw.settings.device.DeviceSettings"
-            android:exported="true"
+            android:name="com.lineageos.settings.device.DeviceSettingsActivity"
+            android:exported="false"
             android:label="@string/advanced_settings" >
             <intent-filter>
-                <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-            <meta-data
-                android:name="com.android.settings.icon"
-                android:resource="@drawable/ic_settings_device" />
-            <meta-data
-                android:name="com.android.settings.category"
-                android:value="com.android.settings.category.device" />
-             <meta-data
-                android:name="com.android.settings.summary"
-                android:resource="@string/summary_empty" />
         </activity>
-        <receiver android:name="com.markw.settings.device.Startup" >
+        <activity-alias
+            android:name="com.lineageos.settings.device.DeviceSettings"
+            android:exported="true"
+            android:enabled="true"
+            android:label="@string/advanced_settings" 
+            android:targetActivity="DeviceSettingsActivity"
+            android:icon="@drawable/ic_mi" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
+            </intent-filter>
+                <meta-data android:name="com.android.settings.category"
+                           android:value="com.android.settings.category.ia.homepage"/>
+                <meta-data android:name="com.android.settings.summary"
+                           android:resource="@string/advanced_settings_summary"/>
+        </activity-alias>
+        <activity
+            android:name="com.lineageos.settings.device.DisplayCalibration"
+            android:exported="true"
+            android:label="@string/kcal_title" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <receiver android:name="com.lineageos.settings.device.Startup" >
             <intent-filter android:priority="100" >
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
