--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -456,13 +456,8 @@ on post-fs-data
     #Create FTM_AP dir for factory test
     mkdir /data/FTM_AP 0775 system system
 
-# FM enable/disable triggers
-	
-on property:hw.fm.init=1
-	write /sys/module/radio_iris_transport/parameters/fmsmd_set 1
-		
-on property:hw.fm.init=0
-	write /sys/module/radio_iris_transport/parameters/fmsmd_set 0
+on property:hw.fm.init=*
+    write /sys/module/radio_iris_transport/parameters/fmsmd_set ${hw.fm.init}
     
 service iop /vendor/bin/iop
     class main
